# gnews-fetcher

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  RENDER_DEPLOYMENT.md  ci.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: Dockerfile
app/news_app/: __init__.py  api.py
app/news_app/providers/: __init__.py  gnews.py
docs/: MANUAL_TESTING.md  QA_STRATEGY.md
qa/: browser_checks.py  conftest.py
qa/manual/: defect_log.md  exploratory_testing.md  test_plan.md  validate_manual_tests.py
qa/reports/: README.md
qa/tests/: test_api.py  test_browser.py
